Fix: Image stretch on flex hero and cta [TMZ-386](#208)

--- a/modules/content/assets/scss/hello-plus-cta.scss
+++ b/modules/content/assets/scss/hello-plus-cta.scss
@@ -156,6 +156,8 @@
 	}
 
 	&.has-image-stretch {
+		--cta-image-width: 100%;
+
 		padding: 0;
 
 		&.has-preset-showcase {
