--- a/modules/content/assets/scss/hello-plus-flex-hero.scss
+++ b/modules/content/assets/scss/hello-plus-flex-hero.scss
@@ -257,6 +257,8 @@
 	}
 
 	&.has-image-stretch {
+		--flex-hero-image-width: 100%;
+
 		padding: 0;
 
 		@media screen and (min-width: $screen-desktop-min) {
